hphp/hack/test/typecheck/typeconsts/interface_override_trait.php
<?hh

trait T1 {
  const type T = int;
}

interface I {
  const type T = int;
}

class A implements I { use T1; }
